# uv-jupyter-kernel

./: mise.toml  pyproject.toml  uv_jupyter_kernel.py
.github/workflows/: autorelease.yml  run-script.yml
.jules/: CONSISTENTLY_IGNORED.md  janitor.md  sentinel.md
tests/: test_security_fix.py  test_uv_jupyter_kernel.py
