[project]
name = "uv-jupyter-kernel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
uv-jupyter-kernel = "uv_jupyter_kernel:main"


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
